2006-08-07  Willie Walker <william.walker@sun.com>

	Fixes #348630

	* at-startup-session.c (at_startup_state_init, at_startup_state_update):
	look for orca binary in path.

	* at-startup-session.h: added new fields to enabled union.

	* main.c (init_startup_state): added information about orca.
	
2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348832

	* at-properties,desktop.in.in: Use correct Bugzilla component.

2006-06-06  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* at-startup-session.c: Mark at_startup_string_compare() static.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install the .desktop file in
	$(datadir)/applications.
	
	* at-properties.desktop.in: add OnlyShowIn=GNOME;

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

Thu Sep  2 17:06:28 2004  Jonathan Blandford  <jrb@redhat.com>

	* main.c: (cb_dialog_response): Change to use help docs instead of
	the "foo"/"bar" that's there.

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* main.c: (setup_dialog):
	Use themed icon for window hint.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2003-11-27  Muktha <muktha.narayan@wipro.com>

	* main.c: Do not popup the logout dialog when the close button (X) of
	window manager is clicked. Fixes bug #124032.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0
