@@ -1,3 +1,8 @@
+2007-02-08  Jens Granseuer  <jensgr@gmx.net>
+
+	* main.c: (create_dialog), (main): fix some reference leaks and don't
+	segfault if the glade file is not available
+
 2006-08-07  Willie Walker <william.walker@sun.com>
 
 	Fixes #348630
